@@ -1,0 +1,20 @@
+
+To add FLTK projects as a new project template for Xcode 3, install the 
+included files in the directory 
+
+> "$(HOME)//Library/Application Support/Developer/Shared/Xcode/"
+
+and restart Xcode.
+
+The generated proects expects fltk 1.3 as it is installed
+using the command line.
+
+> sudo make install
+
+Enjoy!
+
+ -  Matthias
+
+Please send me an EMail if you find errors or would like to suggest
+improvement: mm@matthiasm.com
+
